BSS-8707 [MD]-Spacing issues on audit listing page.

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -9721,12 +9721,12 @@ button:disabled {
 }
 
 .gor-AuditDetails-modal-content .gor-auditDetails-modal-body .ppsUnavailable {
-  position: fixed;
-  top: 50%;
-  left: 45%;
   font-size: 20px;
   font-weight: normal;
   color: #000000;
+  width: 14%;
+  padding: 20%;
+  margin: auto;
 }
 
 .gor-AuditDetails-modal-content .gor-auditDetails-modal-body .AuditDetailsWrapper {
